<resources>
    <string name="app_name">MyUCrop_1</string>
    <string name="ucrop_name">uCrop</string>
    <string name="pick_crop"><![CDATA[pick & crop]]></string>
    <string name="crop_random">Crop random image</string>
    <string name="image_source">Image source</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="freestyle_crop">Freestyle crop</string>
    <string name="dynamicButton">Dynamic</string>
    <string name="squareButton">Square</string>
    <string name="to">to</string>
    <string name="max_cropped_size">Max cropped image size</string>
    <string name="resize_image">Resize image to max size</string>
    <string name="width_image">Width</string>
    <string name="height_image">Height</string>
    <string name="compr_settings">Compression settings</string>
    <string name="picked_crop">now we picked crop</string>
    <string name="rand_crop">Random image crop</string>
    <string name="press_img_src">you\'ve pressed Image source</string>
    <string name="picked_crop_btn">We picked freestyle crop</string>
    <string name="dnm_btn_prs">Dynamic button pressed</string>
    <string name="square_btn_pressed">Square btn has pressed</string>
    <string name="format_quality">Quality: %d</string>
    <string name="ui">UI</string>
    <string name="hide_ui_controls">Hide bottom UI controls</string>
</resources>
